--- a/src/pages/Promise.module.css
+++ b/src/pages/Promise.module.css
@@ -35,6 +35,8 @@
     margin: 0 auto;
     line-height: 1.3;
     font-weight: 700;
+    color: var(--color-white);
+    text-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .container {
